# home-assistant-linux-sensors

./: README.md  makefile  pyproject.toml  requirements.txt
app/: api.py  auth.py  cli.py  sensors.py  settings.py
app/sensors/: api.py  cli.py  handlers.py  models.py
