[project]
name = "home-assistant-linux-sensors"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "psutil",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = ["black", "isort"]
test = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.packages.find]
include = ["app"]

[tool.isort]
profile = "black"
